# synthetic-data-factory

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/sdf/: cli.py  coco.py  preview.py  render.py  report.py  shapes.py  synth.py  yolo.py
tests/: test_smoke.py
