[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data-factory"
version = "0.1.0"
description = "Synthetic dataset generator (images + COCO/YOLO labels) with domain randomization"
requires-python = ">=3.12"

[project.scripts]
sdf = "sdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
